js262/test/language/types/string/S8.4_A13_T2.js


/*---
info: When appears not closed single-quote program failes
es5id: 8.4_A13_T2
description: Try to create variable using 1 single-quote
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var str = ';
